Fix horizontal scrollbar on url input
This fixes an issue where on small viewports, the url input box caused a horizontal scrollbar. This was because the parent div was abs positioned, and a child div was then horizontally pulled 50% to the left. By applying this left-pulling to the same div as is abs positioned, we ensure that the width of the url box is the same as what's visible.

--- a/blocks/rich-text/format-toolbar/style.scss
+++ b/blocks/rich-text/format-toolbar/style.scss
@@ -4,7 +4,7 @@
 
 .blocks-format-toolbar__link-modal {
 	position: relative;
-	left: -50%;
+	//left: -50%;
 	box-shadow: $shadow-popover;
 	border: 1px solid $light-gray-500;
 	background: $white;
